--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,11 +26,6 @@
 <h5> Comments:</h5>
 
  <% @post.comments.each do |comment| %>
-   <div class="well span8">
-    <em>"<%= comment.body %>"</em>
-    <br/>
-    <span class='quiet'>by</span> <%= comment.creator.username %>
-    <small>at <%= display_datetime(comment.created_at) %></small>
-   </div>
-<%end %>
+   <%= render 'comments/comment', comment: comment %>
+ <%end %>
 
